<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_choose_profile"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/take_photo"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@id/tvPhotoLibrary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhotoLibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/photo_library"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toTopOf="@id/tvCancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>