<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.auth.create_profile.CreateProfileActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/lets_create_your_profile"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_profile"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/lblInfo">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_edittext"
                android:gravity="start|center_vertical"
                android:hint="@string/your_name"
                android:inputType="text"
                android:paddingStart="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_50"
                android:textSize="14dp"
                app:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_edittext"
                android:focusable="false"
                android:gravity="start|center_vertical"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:paddingStart="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_50"
                android:textSize="14dp"
                app:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toBottomOf="@id/etName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNext"
            android:layout_width="180dp"
            android:layout_height="44dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_filter_state"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llProfile" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>