<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.auth.choose_username.ChooseUsernameActivity">

        <include
            android:id="@+id/mToolbar"
            layout="@layout/item_toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/choose_your_username"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_radius_gray_30dp"
            android:padding="16dp"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblInfo">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/at"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:fontFamily="@font/poppins_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/your_username"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white_50"
                android:textSize="18dp"
                app:fontFamily="@font/poppins_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivCorrect"
                app:layout_constraintStart_toEndOf="@id/lblAt"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="MutableList MutableList MutableList MutableList MutableListMutableList" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_check_circle_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlreadyTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llUsername"
            tools:text="@string/already_taken" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSuggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/suggestions"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAlreadyTaken" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSuggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSuggestions"
            tools:itemCount="3"
            tools:listitem="@layout/item_suggestions" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNext"
            android:layout_width="180dp"
            android:layout_height="44dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/ic_filter_state"
            android:gravity="center"
            android:longClickable="true"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvSuggestions" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>