<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.auth.onboarding_welcome.WelcomeOneFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:lines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBody"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/lets_get_you_started" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:gravity="center_horizontal"
                android:lines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/turquoise"
                android:textSize="30sp"
                app:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="@string/started" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBody"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/tvInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleBlue"
                tools:src="@drawable/onboard_1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center_horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:fontFamily="@font/poppins_bold"
                app:layout_constraintBottom_toTopOf="@id/btnLetsGo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBody"
                tools:text="@string/swipe_for_a_quick_intro" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnLetsGo"
                android:layout_width="180dp"
                android:layout_height="44dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/ic_filter_state"
                android:gravity="center"
                android:longClickable="true"
                android:text="@string/lets_go"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:visibility="gone"
                app:fontFamily="@font/poppins_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>